# easy_utils

./: .gitignore  README.md  pyproject.toml
src/easy_utils/: __init__.py  base_io.py  base_task.py  cli.py  io_utils.py  log_utils.py  os_utils.py
src/easy_utils/@eaDir/: io_utils.py@SynoEAStream  os_utils.py@SynoEAStream
tests/: test_os_utils.py
